--- a/style.css
+++ b/style.css
@@ -81,9 +81,10 @@ header > h1{
   border-radius: 50%;
   padding: 7px;
   margin: 0 15px
-  padding: 5px;
-  width: 130px;
-
+  padding: 10px;
+  width: 120px;
+  height: 120px;
+  transition: all 0.3s ease;
 }
 
 .choice:hover{
@@ -100,17 +101,43 @@ header > h1{
   font-size: 20px;
 }
 
-.green-glow{
+.green-glow > img{
   border: 4px solid #4dcc7b;
   box-shadow: 0 0 10px #31b43a;
+  transition: all 0.28s ease;
 }
 
-.red-glow{
+.red-glow > img{
   border: 4px solid #fc121b;
   box-shadow: 0 0 10px #d01115;
+  transition: all 0.28s ease;
 }
 
-.grey-glow{
+.grey-glow > img{
   border: 4px solid #464647;
   box-shadow: 0 0 10px #25292b;
+  transition: all 0.28s ease;
+}
+
+.restart{
+  margin: 40px 0;
+  padding: 20px 0;
+  text-align: center;
+}
+
+#restart_btn{
+  background-color: #1d1f24;
+  font-size: 20px;
+  font-family: Asap, sans-serif;
+  color: white;
+  border-color: white;
+  padding: 10px;
+  border-radius: 4px;
+  opacity: 0.5;
+  transition: all 0.28s ease;
+}
+
+#restart_btn:hover{
+  cursor: pointer;
+  opacity: 1;
 }
